--- a/Ubiquitous2/packages.config
+++ b/Ubiquitous2/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="Fluent.Ribbon" version="2.0.2" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.4.32.1" targetFramework="net45" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net45" />
 </packages>
